--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,18 @@
 </head>
 <body>
     <p>Welcome to the chat app</p>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        const socket = io();
+
+        socket.on('connect', () => {
+            console.log('connected to server')
+        })
+
+        socket.on('disconnect', () => {
+            console.log('Disconnected from the server')
+        })
+    </script>
 </body>
 </html>
