--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,6 @@
     <p>Welcome to the chat app</p>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        const socket = io();
-
-        socket.on('connect', () => {
-            console.log('connected to server')
-        })
-
-        socket.on('disconnect', () => {
-            console.log('Disconnected from the server')
-        })
-    </script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
