--- a/public/chat.html
+++ b/public/chat.html
@@ -59,6 +59,7 @@
     <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <script src="/js/libs/moment.min.js"></script>
     <script src="/js/libs/mustache.min.js"></script>
+    <script src="/js/libs/deparam.js"></script>
     <script src="/js/chat.js"></script>
 </body>
 
